24.10.1 - Backport "Notification buttons overlap on mobile" fix
https://github.com/refined-github/refined-github/issues/7959
https://github.com/refined-github/refined-github/pull/7964

--- a/style/24.10.1.css
+++ b/style/24.10.1.css
@@ -23,3 +23,8 @@ details.rgh-highlight-non-default-branch > summary svg {
 	height: var(--base-size-32);
 	padding: 0;
 }
+
+/* Backported fix: Notification buttons overlap on mobile */
+#dialog-show-notifications-tabs-nav ~ action-menu {
+	flex-shrink: 0;
+}
